--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-dropzone": "^14.3.8",
+    "react-easy-crop": "^5.5.6",
     "react-image-crop": "^11.0.10"
   },
   "devDependencies": {
